--- a/vinsoft_product/static/src/css/styles.css
+++ b/vinsoft_product/static/src/css/styles.css
@@ -79,21 +79,23 @@
 	float: left;
 }
 #prod_image .o_form_field_image.oe_avatar.o_form_field {
-    float: left;
-    width: 245px;
-    height: 164px;
-    border: 1px solid #ccc;
-    text-align: center;
+	float: left;
+	width: 246px;
+	height: 168px;
+	border: 2px solid #ccc;
+	text-align: center;
+	box-shadow: 0px 0px 10px #333;
+	border-radius: 5px;
+	overflow: hidden;
+	background: url(/web/static/src/img/placeholder.png) no-repeat center;
 }
 #prod_image img.img.img-responsive {
-	max-height: 150px;
-	max-width: 150px;
-	margin-bottom: 0;
-	width: 50px;
-	height: 50px;
-	display: inline;
-	vertical-align: middle;
-	margin: 55px 0px 0px 0px;
+	max-width: 245px;
+	max-height: 165px;
+	min-width: 242px;
+	height: auto;
+	margin: 0px;
+	overflow: hidden;
 }
 .image_fields {
     width: 820px;
